@startuml Modelo de la base de datos (DB) — ReportaYA

' Nota: herencia JPA = JOINED -> tabla base `cuentas` + tabla por subclase
note as N1
	Herencia: InheritanceType.JOINED
	- Tabla `cuentas` guarda campos comunes
	- Tablas `ciudadanos`, `operadores_municipales`, `tecnicos` contienen la misma PK (id) y actúan como fila hija
end note

entity "personas" as personas {
	* id : bigint <<PK>>
	--
	nombres : varchar
	apellidos : varchar
	dni : varchar <<UNIQUE>>
	telefono : varchar
	correo : varchar <<UNIQUE>>
}

entity "cuentas" as cuentas {
	* id : bigint <<PK>>
	--
	usuario : varchar <<UNIQUE>>
	contrasena_hash : varchar
	persona_id : bigint <<FK personas.id>>
	fecha_creacion : timestamp
	fecha_actualizacion : timestamp
	activo : boolean
}

entity "ciudadanos" as ciudadanos {
	* id : bigint <<PK,FK cuentas.id>>
	--
	-- (sin campos adicionales en el modelo actual)
}

entity "operadores_municipales" as operadores_municipales {
	* id : bigint <<PK,FK cuentas.id>>
	--
}

entity "tecnicos" as tecnicos {
	* id : bigint <<PK,FK cuentas.id>>
	--
}

entity "reportes" as reportes {
	* id : bigint <<PK>>
	--
	titulo : varchar
	descripcion : text
	cuenta_id : bigint <<FK cuentas.id>>
	prioridad : varchar
	estado : varchar
	fecha_creacion : timestamp
	fecha_actualizacion : timestamp
}

entity "asignaciones" as asignaciones {
	* id : bigint <<PK>>
	--
	reporte_id : bigint <<FK reportes.id>>
	operador_id : bigint <<FK operadores_municipales.id>>
	tecnico_id : bigint <<FK tecnicos.id>>
	fecha_asignacion : timestamp
	fecha_cierre : timestamp
}

' Relaciones
personas ||--o{ cuentas : "1:1 (persona_id)"
cuentas ||--o{ reportes : "1:N (cuenta_id)"
reportes ||--o{ asignaciones : "1:N (reporte_id)"
operadores_municipales ||--o{ asignaciones : "1:N (operador_id)"
tecnicos ||--o{ asignaciones : "1:N (tecnico_id)"

' Herencia (representación conceptual)
cuentas <|-- ciudadanos
cuentas <|-- operadores_municipales
cuentas <|-- tecnicos

footer "Generado según mappings JPA (InheritanceType.JOINED)"
@enduml